Fixes file archive preview
The iframe in the file preview overlay is too small, the former fix with `min-height` does not work any more. Using `position: absolute` fixes this.

--- a/app/assets/stylesheets/alchemy/frame.scss
+++ b/app/assets/stylesheets/alchemy/frame.scss
@@ -292,3 +292,11 @@ div#user_info {
     float: left;
   }
 }
+
+.full-iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
